--- a/api/.env
+++ b/api/.env
@@ -4,9 +4,9 @@ DATABASE_USERNAME=admin
 DATABASE_PASSWORD=123edcxz
 DATABASE_PORT=27017
 DATABASE_HOST=localhost
-DATABASE_NAME=cds
-DATABASE_URI=mongodb://admin:123edcxz@localhost:27017/contest-management?authMechanism=SCRAM-SHA-1&authSource=admin
-# DATABASE_URI=mongodb+srv://mtazero:123edcxz@cluster0.aofke.mongodb.net/cds?authSource=admin&replicaSet=Cluster0-shard-0&w=majority&readPreference=primary&retryWrites=true&ssl=true
+DATABASE_NAME=contest-management
+# DATABASE_URI=mongodb://admin:123edcxz@localhost:27017/contest-management?authMechanism=SCRAM-SHA-1&authSource=admin
+DATABASE_URI=mongodb+srv://mtazero:123edcxz@cluster0.aofke.mongodb.net/contest-management?authSource=admin&replicaSet=Cluster0-shard-0&w=majority&readPreference=primary&retryWrites=true&ssl=true
 # FOLDER_SAVED=/home/thang/files/
 
 DEFAULT_PAGE_SIZE=10
