--- a/mobile/tquiz/package.json
+++ b/mobile/tquiz/package.json
@@ -22,6 +22,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-pager-view": "^6.6.1",
     "react-native-paper": "^5.12.5",
+    "react-native-paper-dropdown": "^2.3.1",
     "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
