--- a/mobile/tquiz/app.json
+++ b/mobile/tquiz/app.json
@@ -19,10 +19,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.zindousm.tquiz"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "d13b7346-376f-4679-b431-acd97c0957f4"
+      }
     }
   }
 }
