--- a/mobile/tquiz/package.json
+++ b/mobile/tquiz/package.json
@@ -10,22 +10,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.0",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.9",
-    "expo": "~52.0.17",
-    "expo-status-bar": "~2.0.0",
-    "react": "18.3.1",
-    "react-native": "0.76.3",
-    "react-native-gesture-handler": "^2.21.2",
+    "expo": "^53.0.9",
+    "expo-status-bar": "~2.2.3",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-pager-view": "^6.6.1",
+    "react-native-pager-view": "6.7.1",
     "react-native-paper": "^5.12.5",
     "react-native-paper-dropdown": "^2.3.1",
-    "react-native-reanimated": "^3.16.3",
-    "react-native-safe-area-context": "^5.0.0",
-    "react-native-screens": "^4.3.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-tab-view": "^4.0.5",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2"
@@ -34,13 +34,13 @@
     "@babel/core": "^7.25.2",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/stack": "^7.0.18",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "expo": "^50.0.0",
     "expo-status-bar": "^1.6.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "19.0.0",
     "react-native": "0.72.4",
-    "typescript": "^5.2.2"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
