--- a/mobile/tquiz/package.json
+++ b/mobile/tquiz/package.json
@@ -18,13 +18,13 @@
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-pager-view": "6.7.1",
     "react-native-paper": "^5.12.5",
     "react-native-paper-dropdown": "^2.3.1",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-reanimated": "^3.18.0",
+    "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "~4.10.0",
     "react-native-tab-view": "^4.0.5",
     "react-native-vector-icons": "^10.2.0",
@@ -36,10 +36,7 @@
     "@react-navigation/stack": "^7.0.18",
     "@types/react": "~19.0.10",
     "expo": "^50.0.0",
-    "expo-status-bar": "^1.6.0",
-    "react": "18.2.0",
     "react-dom": "19.0.0",
-    "react-native": "0.72.4",
     "typescript": "~5.8.3"
   },
   "private": true
