--- a/mobile/tquiz/package.json
+++ b/mobile/tquiz/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-community/datetimepicker": "^8.4.1",
+    "@react-navigation/native-stack": "^7.3.14",
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "expo": "^53.0.9",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-pager-view": "6.7.1",
     "react-native-paper": "^5.12.5",
     "react-native-paper-dropdown": "^2.3.1",
